...
    navigation.navigate('ProjectEdit', { id });
  };

  if (loading && projects.length === 0) {
    return (
      <ScreenTemplate
        title="PROJECT LIST"
        titleAnim1={titleAnim1}
        titleAnim2={titleAnim2}
      >
        <View style={styles.loadingContainer}>
          <ActivityIndicator size="large" />
        </View>
...
