...
      hideLoading();
    }

    Alert.alert(
      'パスワードをリセットしました',
      'パスワードをリセットしましたので、再度ログイン画面にてメールアドレスとパスワードを入力してください',
      [{ text: 'OK', onPress: () => navigation.navigate('SignIn') }],
    );
  };

  const headerItems: HeaderToolBarButton[] = [
    { ...HEADER_TOOLBAR_TEMPLATES.back, onPress: handleGoBack },
    {
...
