...
  projectItems?: LinkedProject[];
  headerTitle?: string;
  buttons?: HeaderToolBarButton[];
}

export const HEADER_TOOLBAR_TEMPLATES = {
  back: { id: 'toolbar-back', type: 'back' } as HeaderToolBarButton,
  linkedProjects: {
    id: 'toolbar-linked',
    type: 'linkedProjects',
  } as HeaderToolBarButton,
  headerTitle: {
    id: 'toolbar-headerTitle',
...
