...

  return (
    <View>
      <RippleButton
        onPress={onToggle}
        size={52}
        testID="action-button-with-menu"
        accessibilityRole="button"
      >
        <Icon
          component={FontAwesome6}
          name="ellipsis-vertical"
          size={24}
...
